<resources>
    <string name="app_name">MaterialMotions</string>
    <string name="weekly_progress">Weekly\nProgress</string>
    <string name="weekly_progress_no_break">Weekly progress</string>
    <string name="weekly_progress_dieting">Weekly progress on dieting</string>
    <string name="daily_plan_message">It looks like you are on\ntrack.Please continue to\nfollow your daily plan</string>
    <string name="ok">ok</string>
    <string name="_42_likes">42 likes</string>
</resources>